# GoogleMockGen

./: .gitignore  CMakeLists.txt  GoogleMockGen.kdev4  GoogleMockGenAction.cpp  Makefile  MockGenerator.cpp  MockGenerator.hpp  README.md  cucumber.yml
features/: mocks.feature
features/step_definitions/: steps.rb
test/acceptance/: HeaderGuardsTest.cpp  Interface1.hpp  Interface1Test.cpp  Interface2.hpp  Interface2Test.cpp  InterfaceWithArgs.hpp  InterfaceWithArgsTest.cpp  makeMocks.sh  mocks.txt
